--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "aws": "0.0.3-2",
     "aws4": "^1.6.0",
+    "chart.js": "^2.6.0",
     "express": "^4.15.4",
-    "formidable": "^1.1.1"
+    "formidable": "^1.1.1",
+    "jsdom": "^11.1.0"
   }
 }
