--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "express": "^4.15.4",
     "formidable": "^1.1.1",
     "jsdom": "^11.1.0"
+  },
+  "scripts": {
+	  "start":"node server.js"
   }
 }
